koomgr/yaml/pod/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: manager
  name: koo-system
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: koo-system/koo-serving-cert
  creationTimestamp: null
  name: koo-mutating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /mutate-directory-koobind-io-v1alpha1-group
  failurePolicy: Fail
  name: mgroup.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groups
- clientConfig:
    caBundle: Cg==
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /mutate-directory-koobind-io-v1alpha1-groupbinding
  failurePolicy: Fail
  name: mgroupbinding.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groupbindings
- clientConfig:
    caBundle: Cg==
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /mutate-directory-koobind-io-v1alpha1-user
  failurePolicy: Fail
  name: muser.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - users
---
apiVersion: v1
kind: Service
metadata:
  name: koo-external-service
  namespace: koo-system
spec:
  ports:
  - nodePort: 31444
    port: 444
    protocol: TCP
    targetPort: 8444
  selector:
    control-plane: manager
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: koo-webhook-service
  namespace: koo-system
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    control-plane: manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: manager
  name: koo-manager
  namespace: koo-system
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: manager
  template:
    metadata:
      labels:
        control-plane: manager
    spec:
      containers:
      - args:
        - --namespace
        - $(KOO_NAMESPACE)
        - --config
        - /etc/koo/cfg/config.yaml
        command:
        - /manager
        image: koobind/manager:latest
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        - mountPath: /etc/koo/cfg
          name: config
        - mountPath: /etc/koo/rootCA
          name: ldaprootcas
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
      - configMap:
          items:
          - key: config.yaml
            path: config.yaml
          name: koomgr
        name: config
      - configMap:
          name: ldaprootcas
        name: ldaprootcas
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: koo-system/koo-serving-cert
  creationTimestamp: null
  name: koo-validating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /validate-directory-koobind-io-v1alpha1-group
  failurePolicy: Fail
  name: vgroup.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groups
- clientConfig:
    caBundle: Cg==
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /validate-directory-koobind-io-v1alpha1-groupbinding
  failurePolicy: Fail
  name: vgroupbinding.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groupbindings
- clientConfig:
    caBundle: Cg==
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /validate-directory-koobind-io-v1alpha1-user
  failurePolicy: Fail
  name: vuser.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - users
